--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,3 +14,5 @@ jobs:
       - run: git log > log.txt
       - name: Release
         uses: softprops/action-gh-release@v1
+        with:
+          files: log.txt
